test/parser/error/err_27_new_not_var.pl0
program p; 
const c:=1; 
begin 
new(c, 10) 
end